--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ nav{
 }
 
 nav{
-    padding: 5px 5%; /* dari 10% jadi 5% */
+    padding: 5px 5%;
 }
 
 .logo{
@@ -76,13 +76,12 @@ nav ul li a:hover::after{
 }
 
 .menu-toggle{
-    display: none; /* default hidden */
+    display: none;
     font-size: 28px;
     color: #fff;
     cursor: pointer;
 }
 
-/* Header text */
 .header-text{
     margin-top: 20%;
     font-size: 30px;
@@ -140,7 +139,6 @@ nav ul li a:hover::after{
     text-align: justify;
 }
 
-/* Tabs */
 .tab-titles{
     display: flex;
     margin: 20px 0 40px;
@@ -229,19 +227,19 @@ nav ul li a:hover::after{
     bottom: 0;
     overflow: hidden;
     transition: height 0.5s ease;
-    display: flex;               /* biar gampang align */
-    flex-direction: column;      /* text ditumpuk */
-    justify-content: center;     /* center vertikal */
-    align-items: center;         /* center horizontal */
-    text-align: center;          /* biar rata tengah */
+    display: flex;               
+    flex-direction: column;      
+    justify-content: center;     
+    align-items: center;        
+    text-align: center;          
     padding: 20px;
-    opacity: 0;                  /* awalnya hidden */
+    opacity: 0;                  
     transition: all 0.5s ease;
 }
 
 .project-card:hover .layer {
     height: 100%;
-    opacity: 1;                  /* fade-in pas hover */
+    opacity: 1;                 
 }
 
 .layer h3 {
@@ -260,7 +258,6 @@ nav ul li a:hover::after{
     animation: fadeInUp 0.7s ease;
 }
 
-/* Animasi smooth naik ke atas */
 @keyframes fadeInUp {
     from {
         transform: translateY(20px);
@@ -281,7 +278,6 @@ nav ul li a:hover::after{
     margin-top: 20px;
 }
 
-/* Tombol See More */
 .see-more {
     text-align: center;
     margin-top: 40px;
@@ -341,9 +337,6 @@ nav ul li a:hover::after{
     box-shadow: 0 4px 12px rgba(255, 0, 79, 0.5);
 }
 
-/* ------------------ RESPONSIVE ------------------ */
-
-/* Tablet */
 @media (max-width: 1024px) {
     .header-text h1{
         font-size: 45px;
@@ -370,7 +363,6 @@ nav ul li a:hover::after{
     } 
 }
 
-/* Mobile */
 @media (max-width: 768px) {
     .logo{
     width: 90px;
@@ -399,7 +391,7 @@ nav ul li a:hover::after{
     }
 
     .menu-toggle {
-        display: flex; /* tampilkan burger di mobile */
+        display: flex; 
         flex-direction: column;
         justify-content: space-between;
         width: 23px;
@@ -415,11 +407,7 @@ nav ul li a:hover::after{
         border-radius: 5px;
         transition: all 1s ease;
     }
-    /* .menu-toggle.active{
-        margin-right: 36%;
-        transition: all 0.4s ease;
-    } */
-    /* Animasi burger -> X */
+
     .menu-toggle.active span:nth-child(1) {
         transform: rotate(45deg) translateY(9.3px);
     }
@@ -457,7 +445,6 @@ nav ul li a:hover::after{
     }
 }
 
-/* Animasi fade */
 @keyframes fadeIn {
     from { opacity: 0; transform: translateX(50px); }
     to { opacity: 1; transform: translateX(0); }
