--- a/style.css
+++ b/style.css
@@ -178,11 +178,11 @@ nav ul li a:hover::after{
 
 .tab-contents ul li{
     list-style: none;
-    margin: 10px 0;
+    margin: 30px 0;
 }
 
 .tab-contents ul li span{
-    color: #b54769;
+    color: #b10138;
     font-size: 14px;
 }
 
@@ -286,6 +286,7 @@ nav ul li a:hover::after{
 .see-more .btn {
     display: inline-block;
     padding: 12px 30px;
+    margin-top: 30px;
     background: #ff004f;
     color: #fff;
     font-size: 18px;
@@ -302,7 +303,7 @@ nav ul li a:hover::after{
 
 /* ------------------ CONTACT ------------------ */
 #contact{
-    padding: 100px 0;
+    padding: 50px 0;
     text-align: center;
     background: #000;
     color: #fff;
